[package]
name = "spawn_groups"
version = "2.0.0"
edition = "2021"
authors = ["Genaro-Chris <christian25589@gmail.com>"]
repository = "https://github.com/Genaro-Chris/spawn_groups/"
description = "Structured concurrency construct written in Rust, for Rustaceans"
license-file = "license.txt"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

publish = true

[dependencies]
async-trait = "0.1.73"
num_cpus = "1.16.0"
threadpool = "1.8.1"
cooked-waker = "5.0.0"
parking_lot = "0.12.1"
futures-lite = "1.13.0"
async-mutex = "1.4.0"
